# blue_worker

./: .gitmodules  Cargo.toml  README.md
blue_server/: .gitignore  Cargo.toml  quotes.md  shared_state.data  shared_state.json.not
blue_server/src/: main.rs
blue_server/src/endpoints/: devices.rs  mod.rs  score_table.rs
blue_server/src/model/: device_data.rs  error.rs  limits.rs  mod.rs  shared_data.rs  snapshot.rs
blue_server/templates/: footer.stpl  header.stpl  index.stpl
blue_server/templates/css/: common.css
blue_server/templates/devices/: devices.js  index.stpl  index_2d.html  index_3d.html  points.js
blue_server/templates/panorama/: index.stpl  poller.js
blue_server/templates/score_table/: index.stpl
blue_server/templates/scripts/: common.js
blue_types/: Cargo.toml
blue_types/src/: lib.rs
blue_worker/: Cargo.toml  sdkconfig.defaults
blue_worker/.cargo/: config.toml
blue_worker/src/: main.rs  shared_data.rs
src/: main.rs  worker.rs
