[package]
name = "blue_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
sailfish = "0.9.0"
serde = { version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["sync", "fs"] }
blue_types = { path = "../blue_types" }
chrono = { version = "0.4.38", features = ["serde"] }
