[package]
name = "blue_worker"
version = "0.1.0"
authors = ["Paval-from-Belarus <star-war-sandakan@mail.ru>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "blue_worker"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { path = "../shared/esp-idf-svc", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
serde = "1.0.215"
#esp-idf-hal = "0.44.1"
#esp32-nimble = "0.8.2"

embedded-svc = "0.28.0"
toml-cfg = "0.2.0"
blue_types = { path = "../blue_types" }
anyhow = "1.0.94"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
